# todos

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture-2025-03-15-1703.excalidraw  architecture.excalidraw  constants.ts  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sample.env  ssm-pf.sh  tailwind.config.ts
actions/auth/: login.ts  register.ts
actions/todos/: completeTodo.ts  submitTodo.ts
app/: layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/components/: Nav.tsx  NavLink.tsx  UserProfileIcon.tsx
app/components/DatePicker/: DatePicker.tsx  (+1 more)
app/todos/: layout.tsx  page.tsx
auth/: auth.ts
db/: db.ts  seed.ts
lib/auth/: auth.ts
lib/categories/: getAllCategories.ts  index.ts
lib/emails/: sendEmail.ts
lib/todos/: createTodo.ts  getManyTodos.ts  getTodo.ts  index.ts  updateTodo.ts
prisma/: schema.prisma  seed.local.ts
schemas/auth/: register.ts
schemas/todos/: createTodo.ts  index.ts
terraform/: .terraform.lock.hcl  main.tf  provider.tf  readme.md  variables.tf
terraform/bastion/: main.tf  vars.tf
terraform/budgets/: main.tf  services.tf  vars.tf
terraform/cognito/: main.tf  vars.tf
terraform/ec2/: main.tf  vars.tf
terraform/network/: main.tf  outputs.tf  vars.tf
terraform/postgres/: main.tf  outputs.tf  vars.tf
terraform/ses/: main.tf  outputs.tf  variables.tf
tests/: test_todos.py
types/: auth.ts  todo.ts
utils/: index.ts  isActiveLink.ts  serialiseTodo.ts  titleCaseString.ts
(+30 files in other folders)
