[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Luke Holmes <lukemartynholmes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-PyMongo = "^2.3.0"
mkdocs = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
